--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-intersection-observer": "^9.8.2",
+    "react-scripts": "^3.4.4",
     "tailwindcss": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
